Wishlist-alignment-issue-at-mobile

--- a/app/design/frontend/Magento/blank/Magento_MultipleWishlist/web/css/source/_module.less
+++ b/app/design/frontend/Magento/blank/Magento_MultipleWishlist/web/css/source/_module.less
@@ -342,7 +342,7 @@
         .product {
             &-item {
                 &-checkbox {
-                    left: 20px;
+                    left: 0;
                     position: absolute;
                     top: 20px;
                 }
